prod_snapshot_2015-09-24_1030/objects/Market__c.object
<CustomObject>
    <fields>
        <fullName>Active_BC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active BC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_CLP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active CLP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active CP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_DC__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active DC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <inlineHelpText>Other Details of Import</inlineHelpText>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Threshold__c</fullName>
        <label>Approval Threshold</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City_Area__c</fullName>
        <label>City/Area</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Appr_Active__c</fullName>
        <formula>IF(DealChicken_Approver__r.IsActive = True, &quot;Active&quot;,&quot;Not Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Appr Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Area_Manager_Location__c</fullName>
        <formula>City_Area__c &amp; &quot;, &quot; &amp;  State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Area Manager Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Pro_Hidden__c</fullName>
        <formula>DealChicken_PRO__r.User_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Pro Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealChicken_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Operations Coordinator....Deal Quality &amp; Selection - Approves Deals Per Market Assigned</inlineHelpText>
        <label>DealChicken DQS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Markets_Of_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DealChicken_MLC_Group__c</fullName>
        <description>Represents MLC Groups.  One MLC would be comprise each specified group</description>
        <inlineHelpText>1 - vchu@dealchicken.com
2 - apamplin@dealchicken.com
3 - anmorales@dealchicken.com
4 - dgosnell@dealchicken.com
5 - mhabib@dealchicken.com</inlineHelpText>
        <label>DealChicken MLC Group</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DealChicken_MLC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Merchant Loyalty Coordinator - Post Sale Account Manager For DealChicken</inlineHelpText>
        <label>DealChicken MLC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Markets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DealChicken_PRO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The DealChicken Production Manager</inlineHelpText>
        <label>DealChicken PRO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Markets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DealChicken_ROM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DealChicken ROM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Markets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DealChicken_RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DealChicken RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Markets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DealChicken_Specs__c</fullName>
        <description>Unique By Market</description>
        <label>DealChicken Specs</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deal_Chicken_AE_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Count of AE&apos;s assigned to the market</description>
        <label>DealChicken AE Head Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MLC_Full_Name__c</fullName>
        <formula>DealChicken_MLC__r.User_Full_Name__c</formula>
        <label>MLC Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_30_Day_DC_Review__c</fullName>
        <formula>HYPERLINK(&quot;https://na10.salesforce.com/00OF0000004CTLg?pv0=&quot; &amp;  Name, &quot;Show Per Market&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Run</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Abbrev__c</fullName>
        <label>Market Abbrev</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Attribute__c</fullName>
        <description>Supplemental attributes defining the market</description>
        <inlineHelpText>Supplemental attributes defining the market. Initial set up is to define Main and Bantam markets. You can select multiple values as they best describe the market.</inlineHelpText>
        <label>Market Attributes</label>
        <picklist>
            <picklistValues>
                <fullName>Main</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bantam</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>My_Market__c</fullName>
        <formula>if(OR(CONTAINS(DealChicken_Approver__c , $User.Id ),
CONTAINS( DealChicken_PRO__c  , $User.Id ),
CONTAINS( DealChicken_RSM__c  , $User.Id )),
&apos;YES&apos;,&apos;NO&apos;)</formula>
        <label>My Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>DC Region</label>
        <picklist>
            <picklistValues>
                <fullName>Broadcast - North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast - South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper - Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper - Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper - Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper - South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper - West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Threshold__c</fullName>
        <label>Renewal Threshold</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sell_Through_Next_2__c</fullName>
        <formula>Target_Sell_Through__c * 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Sell Through Next Two Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_Market_Spec__c</fullName>
        <formula>IF( ISBLANK(DealChicken_Specs__c),&quot;No Spec Listed&quot;,HYPERLINK( DealChicken_Specs__c ,&quot;Show Spec&quot;,&quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Market Spec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Yipit__c</fullName>
        <formula>HYPERLINK( &quot;https://na10.salesforce.com/00OF0000004CPFt?pv0=&quot;+Id,&quot;Show Spec&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Yipit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Sell_Through__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Target Sell Through</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UI_Market__c</fullName>
        <label>UI Market</label>
        <picklist>
            <picklistValues>
                <fullName>ACADIANA-LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTA-GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGOR-ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANTAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATTLE-CREEK-MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BINGHAMTON-NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUFFALO-NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BURLINGTON-VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENTRAL-JERSEY-NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENTRAL-WISCONSIN-WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CINCINNATI-OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLARKSVILLE-TN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLEVELAND-OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLUMBIA-SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COSHOCTON-OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUMBERLAND-COUNTY-NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DENVER-CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DES-MOINES-IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DETROIT-MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST-VALLEY-AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELMIRA-NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIRFIELD-COUNTY-OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FONDDULAC-OSHKOSH-WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORT-MYERS-FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRAND-RAPIDS-MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREAT-FALLS-MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREEN-BAY-WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREENVILLE-SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HATTIESBURG-MS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Market</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>City_Area__c</columns>
        <columns>State__c</columns>
        <columns>Region__c</columns>
        <columns>DealChicken_RSM__c</columns>
        <columns>DealChicken_Approver__c</columns>
        <columns>Active_BC__c</columns>
        <columns>Active_CP__c</columns>
        <columns>Active_DC__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DealChicken_MLC_Group_Review</fullName>
        <columns>NAME</columns>
        <columns>City_Area__c</columns>
        <columns>DealChicken_RSM__c</columns>
        <columns>Market_Abbrev__c</columns>
        <columns>DealChicken_Approver__c</columns>
        <columns>DealChicken_MLC__c</columns>
        <columns>DealChicken_MLC_Group__c</columns>
        <columns>DC_Appr_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_DC__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DealChicken MLC Group Review</label>
    </listViews>
    <listViews>
        <fullName>DealChicken_MarketTeam</fullName>
        <columns>NAME</columns>
        <columns>City_Area__c</columns>
        <columns>State__c</columns>
        <columns>DealChicken_Approver__c</columns>
        <columns>DealChicken_MLC__c</columns>
        <columns>DealChicken_MLC_Group__c</columns>
        <columns>DealChicken_RSM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_DC__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DealChicken Market Team</label>
        <sharedTo>
            <role>ExecutiveDirector</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DealChicken_NJSync</fullName>
        <columns>NAME</columns>
        <columns>City_Area__c</columns>
        <columns>DealChicken_RSM__c</columns>
        <columns>Market_Abbrev__c</columns>
        <columns>DealChicken_Approver__c</columns>
        <columns>DealChicken_MLC__c</columns>
        <columns>Active_DC__c</columns>
        <columns>DC_Appr_Active__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NJ</value>
        </filters>
        <label>DealChicken NJ Sync</label>
        <sharedTo>
            <role>ExecutiveDirector</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Market</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Account_00NF0000008ORu2MAG</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <field>Account.DC_Market__c</field>
        <filterItems>
            <field>Market__c.Active_BC__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Market__c.Active_CP__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Market__c.Active_DC__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Market</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00NF0000008OV2iMAG</fullName>
        <active>true</active>
        <field>Opportunity.DealChicken_Market__c</field>
        <filterItems>
            <field>Market__c.Active_DC__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Opportunity_DealChicken Market</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IF0000001omxfMAA_00NF0000008qDyQMAU</fullName>
        <active>true</active>
        <field>Yipit__c.Market__c</field>
        <filterItems>
            <field>Market__c.Active_DC__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Yipit_Market</name>
    </namedFilters>
    <pluralLabel>Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>